# mlops-lab-11

./: .env  .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci_cd_workflow.yaml  hello_world.yaml
sentiment_app/: app.py
sentiment_app/api/models/: request.py
sentiment_app/model/: predictor.py
src/scripts/: download.py  export_classifier_to_onnx.py  export_sentence_transformer_to_onnx.py  settings.py
tests/: test_api.py
